AI, KAFKA BACK 연동 중#75